added categoria & products model, controller, repo & services need to be fixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # Configuración JPA
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 # spring.jpa.hibernate.ddl-auto=create-drop
 spring.sql.init.mode=never
